# gamba

./: Cargo.toml  Dockerfile  LICENSE  README.md  build.rs  deny.toml  package-lock.json  package.json  shell.nix  tailwind.config.js
.github/: labels.yml
.github/workflows/: ci.yml  publish.yml  sync-labels.yml
.sqlx/: query-075eb25935bf8c39a75b9b3aaae4f1959074ce3a47fea8d6d70aef3115b2a254.json  query-17f3a6c866535ed96d2c7e9fa2081114ef43b192b6124800c52d7fe1988a1374.json  query-5059db770a13db54ad34503be1b847e925e9742636b47ab8dbf78287bde94560.json  query-6aa6fe0a5711f4cf68cdd666a9331cb7f161504426a90dcbafca478b25688371.json  query-80332058d5539b972568d259f84bee587a505115b63c88ba07eb6ab398c833d7.json  query-864557efdf1edd7ecea98b7c68edd1694bcfa3c99413d2e64a0ec2d05c4fca79.json  query-dfac21c857dea1c9f38510058d9bc09890ad6be6fdbdf13f5509d89c518cbf58.json  query-e059e7293c9bdd4aea5d858bf79c0fdd806b510981fadf69bbf1fa6e9754ac05.json  query-fe433c666cf46410f210f68cb5877ec7378430455ae7f117a119e57ea65e2fd7.json
app/: Cargo.toml  Dioxus.toml  tailwind.config.js
app/public/: tailwind.css
app/src/: main.rs
app/src/components/: hero.rs  income_card.rs  mod.rs  navbar.rs  transaction_table.rs
app/src/views/: home.rs
crates/config/: Cargo.toml
migrations/: 20241203182901_add_user_table.up.sql  20241207012046_add_user_bet.down.sql  20241207012046_add_user_bet.up.sql  20241217180026_add_user_access_token.up.sql  20241219222031_make_bet_user_id_non_nullable.down.sql  20241219222031_make_bet_user_id_non_nullable.up.sql  20241219225422_refactor_user_bets.down.sql  20241219225422_refactor_user_bets.up.sql  20241220150006_generate_snowflakes.up.sql  20241222154449_add_bookmakers.down.sql  20241222154449_add_bookmakers.up.sql
src/: app.rs  auth.rs  config.rs  controllers.rs  lib.rs  middleware.rs  real_ip.rs  router.rs  util.rs
src/config/: base.rs  database.rs  discord.rs  server.rs
src/controllers/: bet.rs  site_metadata.rs
src/controllers/bet/: list.rs  place.rs
src/controllers/user/: me.rs  session.rs
src/database/: client.rs  mod.rs  operations.rs
src/middleware/: common_headers.rs  log_request.rs  normalize_path.rs  real_ip.rs  session.rs
src/util/: errors.rs  sha256.rs  token.rs  tracing.rs
src/util/errors/: json.rs
